tests/errors/pp-unsolved-defined-2.h
#if 0 || defined foo
#endif
